--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         </div>
         <div class="preview"></div>
     </main>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
